plex/overseerr/ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: nginx-lan-overseerr
spec:
  ingressClassName: nginx-lan
  rules:
  - host: overseerr.local
    http:
      paths:
      - backend:
          service:
            name: overseerr
            port:
              name: http
        path: /
        pathType: Prefix
  tls:
  - hosts:
    - overseerr.local
---
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  annotations:
    sclem.dev/external-dns: "true"
  name: nginx-wg-overseerr
spec:
  ingressClassName: nginx-wg
  rules:
  - host: overseerr.local
    http:
      paths:
      - backend:
          service:
            name: overseerr
            port:
              name: http
        path: /
        pathType: Prefix
  tls:
  - hosts:
    - overseerr.local
